crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R2_plus_R1.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__typenum_ladder__R2_plus_R1.rs:5:24
  |
5 |    let _ = R2::new() + R1::new();
  |                        ^^^^^^^^^ expected `LadderRung<UInt<..., ...>>`, found `LadderRung<UInt<UTerm, B1>>`
  |
  = note: expected struct `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B1>>`
             found struct `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>`
